<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_resume"
            android:checked="false"
            android:title="@string/resume"
            android:icon="@drawable/ic_resume_white_24dp"/>
		<item
			android:id="@+id/menu_accounts"
			android:checked="false"
			android:title="@string/accounts"
			android:icon="@drawable/ic_account_white_24dp"/>
		<item
			android:id="@+id/menu_sources"
			android:checked="false"
			android:title="@string/sources"
			android:icon="@drawable/ic_source_black_24dp"/>
        <item
            android:id="@+id/menu_credit_card"
            android:checked="false"
            android:title="@string/credit_card"
            android:icon="@drawable/ic_credit_card_white_24dp"/>
		<item
			android:id="@+id/menu_receipts"
			android:checked="false"
			android:title="@string/receipts"
			android:icon="@drawable/ic_receipt_white_24dp"/>
		<item
			android:id="@+id/menu_expenses"
			android:checked="false"
			android:title="@string/expenses"
			android:icon="@drawable/ic_expense_white_24dp"/>
		<item
			android:id="@+id/menu_bills"
			android:checked="false"
			android:title="@string/bills"
			android:icon="@drawable/ic_bill_white_24dp"/>
		<item
			android:id="@+id/menu_overview"
			android:checked="false"
			android:title="@string/overview"
			android:icon="@drawable/ic_overview_white_24dp"/>
	</group>
</menu>