<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<TableLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_margin="@dimen/min_spacing">

		<TableRow android:layout_marginBottom="@dimen/min_spacing">

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:layout_gravity="center_vertical"
				android:text="@string/init_date"
				android:layout_marginEnd="@dimen/min_spacing"/>

			<br.com.jonathanzanella.myexpenses.views.DateTimeView
				android:id="@+id/initTime"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"/>

		</TableRow>

		<TableRow android:layout_marginBottom="@dimen/min_spacing">

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:layout_gravity="center_vertical"
				android:text="@string/end_date"
				android:layout_marginEnd="@dimen/min_spacing"/>

			<br.com.jonathanzanella.myexpenses.views.DateTimeView
				android:id="@+id/endTime"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"/>

		</TableRow>

		<TableRow android:layout_marginBottom="@dimen/min_spacing">

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:layout_gravity="center_vertical"
				android:text="@string/log_level"
				android:layout_marginEnd="@dimen/min_spacing"/>

			<RadioGroup
				android:id="@+id/logLevel"
				android:orientation="horizontal"
	            tools:ignore="SmallSp">

				<RadioButton
					android:id="@+id/logLevelError"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/error"
					android:textSize="10sp"/>
				<RadioButton
					android:id="@+id/logLevelWarning"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/warning"
					android:textSize="10sp"/>
				<RadioButton
					android:id="@+id/logLevelInfo"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/info"
					android:checked="true"
					android:textSize="10sp"/>
				<RadioButton
					android:id="@+id/logLevelDebug"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/debug"
					android:textSize="10sp"/>
			</RadioGroup>

		</TableRow>

	</TableLayout>

	<android.support.v7.widget.RecyclerView
		android:id="@+id/logs"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>

</LinearLayout>