<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_margin="@dimen/default_spacing">

	    <TextView
	        style="@style/HeaderTitle"
	        android:text="@string/accounts"/>

	    <android.support.v7.widget.RecyclerView
	        android:id="@+id/view_monthly_resume_accounts"
	        android:layout_width="match_parent"
	        android:layout_height="75dp"/>

	    <TextView
	        style="@style/HeaderTitle"
	        android:text="@string/receipts"
	        android:layout_marginTop="@dimen/default_spacing"/>

	    <android.support.v7.widget.RecyclerView
	        android:id="@+id/view_monthly_resume_receipts"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>

	    <TextView
	        style="@style/HeaderTitle"
	        android:text="@string/expenses"
		    android:layout_marginTop="@dimen/default_spacing"/>

	    <android.support.v7.widget.RecyclerView
	        android:id="@+id/view_monthly_resume_expenses"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>

		<TextView
			style="@style/HeaderTitle"
			android:text="@string/bills"
			android:layout_marginTop="@dimen/default_spacing"/>

		<android.support.v7.widget.RecyclerView
			android:id="@+id/view_monthly_resume_bills"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

	</LinearLayout>
</ScrollView>