<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent">

	<include
		android:id="@+id/toolbar"
		layout="@layout/toolbar"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:layout_margin="@dimen/default_spacing">

		<android.support.design.widget.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/default_spacing">

			<android.support.v7.widget.AppCompatEditText
				android:id="@+id/act_edit_account_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/name"/>

		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/min_spacing">

			<android.support.v7.widget.AppCompatEditText
				android:id="@+id/act_edit_account_balance"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="number"
				android:hint="@string/balance"/>

		</android.support.design.widget.TextInputLayout>

		<CheckBox
			android:id="@+id/act_edit_account_negative"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/negative"
			android:layout_marginBottom="@dimen/default_spacing"/>

		<CheckBox
			android:id="@+id/act_edit_account_to_pay_credit_card"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/account_to_pay_credit_card"
			android:layout_marginBottom="@dimen/default_spacing"/>

		<CheckBox
			android:id="@+id/act_edit_account_to_pay_bills"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/account_to_pay_bills"
			android:layout_marginBottom="@dimen/default_spacing"/>

		<br.com.jonathanzanella.myexpenses.user.SelectUserView
			android:id="@+id/act_edit_account_user"
			android:layout_width="match_parent"
		    android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/default_spacing"/>
	</LinearLayout>

</LinearLayout>