<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/min_spacing">

    <TableLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/min_spacing">

        <TableRow>

            <TextView
                android:id="@+id/row_unsync_model_id_stt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:layout_marginEnd="@dimen/min_spacing"/>

            <TextView
                android:id="@+id/row_unsync_model_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_primary"/>

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/row_unsync_model_created_at_stt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created_at"
                android:layout_marginEnd="@dimen/min_spacing"/>

            <TextView
                android:id="@+id/row_unsync_model_created_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_primary"/>

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/row_unsync_model_updated_at_stt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updated_at"
                android:layout_marginEnd="@dimen/min_spacing"/>

            <TextView
                android:id="@+id/row_unsync_model_updated_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_primary"/>

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/row_unsync_model_data_stt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:layout_marginEnd="@dimen/min_spacing"/>

            <TextView
                android:id="@+id/row_unsync_model_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_primary"/>

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end">

        <Button
            android:id="@+id/row_unsync_model_sync_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_sync"/>

        <Button
            android:id="@+id/row_unsync_model_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>

    </LinearLayout>

</LinearLayout>