<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_spacing">

        <TableRow>

            <TextView
                android:id="@+id/act_show_expense_name_stt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginEnd="@dimen/min_spacing"/>

            <TextView
                android:id="@+id/act_show_expense_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_primary"/>

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/act_show_expense_date_stt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_marginEnd="@dimen/min_spacing"/>

            <TextView
                android:id="@+id/act_show_expense_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_primary"/>

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/act_show_expense_value_stt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:layout_marginEnd="@dimen/min_spacing"/>

            <TextView
                android:id="@+id/act_show_expense_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_primary"/>

        </TableRow>

	    <TableRow>

		    <TextView
			    android:id="@+id/act_show_expense_value_to_show_in_overview_stt"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/income_to_show_in_overview"
			    android:layout_marginEnd="@dimen/min_spacing"/>

		    <TextView
			    android:id="@+id/act_show_expense_value_to_show_in_overview"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textColor="@color/color_primary"/>

	    </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/act_show_expense_chargeable_stt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paid_with"
                android:layout_marginEnd="@dimen/min_spacing"/>

            <TextView
                android:id="@+id/act_show_expense_chargeable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_primary"/>

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/act_show_expense_bill_stt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bill"
                android:layout_marginEnd="@dimen/min_spacing"/>

            <TextView
                android:id="@+id/act_show_expense_bill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_primary"/>

        </TableRow>

	    <TableRow
		    android:id="@+id/act_show_expense_charge_next_month"
		    android:visibility="gone">

		    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/pay_next_month"
			    android:layout_marginEnd="@dimen/min_spacing"/>

	    </TableRow>

    </TableLayout>
</LinearLayout>