<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="@dimen/default_spacing">

	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/default_spacing">

		<android.support.v7.widget.AppCompatEditText
			android:id="@+id/serverUrlView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/server_url"/>

	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/default_spacing">

		<android.support.v7.widget.AppCompatEditText
			android:id="@+id/serverTokenView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textPassword"
			android:hint="@string/server_token"/>

	</android.support.design.widget.TextInputLayout>

	<Button
		android:id="@+id/syncBtn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:text="@string/sync"/>

</LinearLayout>