<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/default_spacing">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_spacing">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/act_edit_credit_card_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"/>

        </android.support.design.widget.TextInputLayout>

	    <android.support.design.widget.TextInputLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="@dimen/default_spacing">

		    <android.support.v7.widget.AppCompatEditText
			    android:id="@+id/act_edit_credit_card_account"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:inputType="none"
			    android:clickable="true"
			    android:focusable="false"
			    android:hint="@string/account"/>

	    </android.support.design.widget.TextInputLayout>

	    <RadioGroup
		    android:id="@+id/act_edit_credit_card_type"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content">

		    <RadioButton
			    android:id="@+id/act_edit_credit_card_type_debit"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/debit"/>

		    <RadioButton
			    android:id="@+id/act_edit_credit_card_type_credit"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/credit"/>

	    </RadioGroup>

    </LinearLayout>

</LinearLayout>