<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Card"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TableLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/min_spacing">

        <TableRow>

            <TextView
                android:id="@+id/row_receipt_name_stt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginEnd="@dimen/min_spacing"/>

            <TextView
                android:id="@+id/row_receipt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_primary"/>

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/row_receipt_date_stt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_marginEnd="@dimen/min_spacing"/>

            <TextView
                android:id="@+id/row_receipt_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_primary"/>

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/row_receipt_income_stt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:layout_marginEnd="@dimen/min_spacing"/>

            <TextView
                android:id="@+id/row_receipt_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_primary"/>

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/row_receipt_source_stt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/source"
                android:layout_marginEnd="@dimen/min_spacing"/>

            <TextView
                android:id="@+id/row_receipt_source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_primary"/>

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/row_receipt_account_stt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:layout_marginEnd="@dimen/min_spacing"/>

            <TextView
                android:id="@+id/row_receipt_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_primary"/>

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/row_receipt_show_in_resume_stt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_in_resume"
                android:layout_marginEnd="@dimen/min_spacing"/>

            <TextView
                android:id="@+id/row_receipt_show_in_resume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_primary"/>

        </TableRow>

    </TableLayout>
</android.support.v7.widget.CardView>