<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/default_spacing">

        <TableRow>

            <TextView
                android:id="@+id/act_show_card_name_stt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginEnd="@dimen/min_spacing"/>

            <TextView
                android:id="@+id/act_show_card_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_primary"/>

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/act_show_card_account_stt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:layout_marginEnd="@dimen/min_spacing"/>

            <TextView
                android:id="@+id/act_show_card_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_primary"/>

        </TableRow>

	    <TableRow>

		    <TextView
			    android:id="@+id/act_show_card_type_stt"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/type"
			    android:layout_marginEnd="@dimen/min_spacing"/>

		    <TextView
			    android:id="@+id/act_show_card_type"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textColor="@color/color_primary"/>

	    </TableRow>

    </TableLayout>

	<Button
		android:id="@+id/act_show_card_pay_credit_card_bill"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/default_spacing"
		android:text="@string/pay_credit_card_bill"/>
</LinearLayout>